<resources>
    <string name="app_name">Gift Server</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sign_in">sign in</string>
    <string name="success">success</string>
    <string name="fail">fail</string>
    <string name="more_option">More options</string>
    <string name="forgot_password">Forgot password</string>
    <string name="create_account">Create an account</string>
    <string name="user_name">user name</string>
    <string name="pass_word">pass word</string>
    <string name="confirm_pass_word">confirm pass word</string>
    <string name="email">email</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_success">Sign up success</string>
    <string name="sign_up_fail">Sign up fail</string>
    <string name="second">second</string>
    <string name="go_page">You will return to the Login page for</string>
    <string name="seconds">seconds</string>
    <string name="wrong_pass">Wrong pass word</string>
    <string name="no_user">No user name is</string>
    <string name="sign_in_success">Sign in success</string>
    <string name="remember">Remember</string>
    <string name="event">Your events</string>
    <string name="client">Remote client</string>
    <string name="exit">Exit</string>
    <string name="update">Update</string>
    <string name="add">Add event</string>
    <string name="date">Date</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="hour">Hour</string>
    <string name="munite">Minute</string>
    <string name="repeat">Repeat</string>
    <string name="no_clients">No clients</string>
    <string name="message">Message</string>
    <string name="image">Image link</string>
    <string name="music">Music link</string>
    <string name="attach_music">Music:</string>
    <string name="video">Video link</string>
    <string name="notification">Notification</string>
    <string name="notification_before">Notificaion before</string>
    <string name="create_event">Create event</string>
    <string name="time">Time</string>
    <string name="description">Description</string>
    <string name="event_name">Event name</string>
    <string name="choose_client">Choose client</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="addEvent">Add event</string>
    <string name="add_event_success">Add success</string>
    <string name="add_event_fail">Add fail!</string>
    <string name="textDemo">Happy Birthday</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="date_will_send">Date:</string>
    <string name="time_will_send">Time:</string>
    <string name="love_message">Love message:</string>
    <string name="image_attack">Image attack:</string>
    <string name="image_attach">Attach image:</string>
    <string name="date_demo">2017-05-31</string>
    <string name="time_demo">01:44:40</string>
    <string name="attach_video">Video:</string>
    <string name="note">Note:</string>
    <string name="test_client">Test connect</string>
    <string name="no_client">No</string>
    <string name="name_is_empty">Name is empty</string>
    <string name="connect_success">Client is online</string>
    <string name="connect_fail">Client is offline</string>
    <string name="add_client_before_check">No client for this event</string>
    <string name="sign_out">Sign out</string>
    <string name="client_manager">Remote Management</string>
    <string name="log_out">Log out</string>
    <string name="client_name_size">30sp</string>
    <string name="take_image">Take image</string>
    <string name="location">Location</string>
    <string name="id">Id:</string>
    <array name="country_arrays">
        <item>Việt nam</item>
        <item>Thái Lan</item>
        <item>Lào</item>
        <item>Campuchia</item>
    </array>
    <string name="title_activity_maps">Map</string>
    <string name="log_in">Log in</string>
</resources>
