<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="10dp">
    <com.example.administrator.surprisegiftserver.model.Demo
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_username"
            android:hint="@string/user_name"
            android:paddingLeft="10dp"
            android:textColor="@color/editTextUserNameBorder"
            android:textColorHint="@color/editTextUserNameBorder" />

        <EditText
            android:id="@+id/et_pass_word"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_username"
            android:hint="@string/pass_word"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColor="@color/editTextUserNameBorder"
            android:textColorHint="@color/editTextUserNameBorder" />

        <CheckBox
            android:id="@+id/cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/remember"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:theme="@style/cb_style" />

        <Button
            android:id="@+id/bt_sign_in"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/sign_in" />

        <TextView
            android:id="@+id/tv_more_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/more_option"
            android:textColor="@color/more_option_text_color"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/fail_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/pb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />
    </LinearLayout>
</RelativeLayout>