<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="center"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_username"
            android:hint="@string/user_name"
            android:paddingLeft="10dp"
            android:textColor="@color/editTextUserNameBorder"
            android:textColorHint="@color/editTextUserNameBorder" />

        <EditText
            android:id="@+id/et_pass_word"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_username"
            android:hint="@string/pass_word"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColor="@color/editTextUserNameBorder"
            android:textColorHint="@color/editTextUserNameBorder" />

        <EditText
            android:id="@+id/et_confirm_pass_word"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_username"
            android:hint="@string/confirm_pass_word"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColor="@color/editTextUserNameBorder"
            android:textColorHint="@color/editTextUserNameBorder" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_username"
            android:hint="@string/email"
            android:paddingLeft="10dp"
            android:textColor="@color/editTextUserNameBorder"
            android:textColorHint="@color/editTextUserNameBorder" />

        <Button
            android:id="@+id/bt_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/sign_up" />

        <TextView
            android:id="@+id/tv_status"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/editTextUserNameBorder" />
        <TextView
            android:id="@+id/tv_time_left"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="10sp"
            android:textColor="@color/editTextUserNameBorder" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/pb"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:visibility="invisible" />
    </LinearLayout>
</RelativeLayout>